# chromadb-streamlit

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: secrets.toml
chromadb_connection/: __init__.py  connection.py
tests/: test_chromadb_connection.py
